info, play etc pages

--- a/src/app/assets/fonts/index.css
+++ b/src/app/assets/fonts/index.css
@@ -34,3 +34,10 @@
   weight: 300 !important;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "hellplague";
+  src: url("./hellplague.otf") format("otf");
+  weight: 300 !important;
+  font-style: normal;
+}
