--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,6 +27,48 @@ body {
   cursor: crosshair;
 }
 
+h1 {
+  font-size: calc(1.375rem + 1.5vw);
+}
+h2 {
+  font-size: calc(1.325rem + 0.9vw);
+}
+h3 {
+  font-size: calc(1.3rem + 0.6vw);
+}
+h4 {
+  font-size: calc(1.275rem + 0.3vw);
+  line-height: 1.2;
+  margin-bottom: 0.5rem;
+  margin-top: 0;
+  letter-spacing: 1;
+}
+h5 {
+  font-size: 1.25rem;
+}
+
+.work-detail p {
+  font-size: clamp(1rem, 2.5vw, 1.2rem);
+}
+@media (min-width: 1200px) {
+  .h1,
+  h1 {
+    font-size: 2.5rem;
+  }
+  .h2,
+  h2 {
+    font-size: 2rem;
+  }
+  .h3,
+  h3 {
+    font-size: 1.75rem;
+  }
+  .h4,
+  h4 {
+    font-size: 1.5rem;
+  }
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -90,12 +132,25 @@ h1 {
   font-size: clamp(24px, 3vw, 40px);
 }
 
-h2 {
+.navbar h2,
+.workcard h2 {
   font-size: clamp(10px, 3vw, 17px) !important;
+}
+
+.detail-section h3 {
+  font-size: clamp(2rem, 2vw, 4rem);
 }
 
 p {
   font-size: min(3vw, 16px);
+}
+
+.zigzag-header p {
+  font-size: clamp(1rem, 2.5vw, 1.3rem);
+}
+
+.description > p {
+  font-size: 0.8rem;
 }
 
 .one {
@@ -148,6 +203,26 @@ section span {
   height: 410px;
 }
 
+li::marker {
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  .MuiButtonBase-root.MuiButton-sizeMedium {
+    font-size: 0.8rem !important;
+  }
+
+  .MuiButtonBase-root.MuiButton-sizeLarge {
+    font-size: 1rem !important;
+  }
+}
+.MuiButtonBase-root.MuiButton-sizeMedium {
+  font-size: 1.1rem;
+}
+
+.MuiButtonBase-root.MuiButton-sizeLarge {
+  font-size: 1.25rem;
+}
 @media (max-width: 768px) {
   .thumbnail {
     height: 200px; /* Set height to 200px on smaller screens */
