--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
+*/ :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
@@ -16,6 +18,14 @@
   }
 }
 
+html {
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  font-family: "Lato", sans-serif;
+  box-sizing: border-box;
+  overflow-y: scroll;
+}
+
 body {
   /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,14 +34,18 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb)); */
+  font-family: "Lato", san-serif;
+  font-weight: 300;
   cursor: crosshair;
 }
 
 h1 {
   font-size: calc(1.375rem + 1.5vw);
+  /* font-weight: 300; */
 }
 h2 {
   font-size: calc(1.325rem + 0.9vw);
+  /* font-weight: 300; */
 }
 h3 {
   font-size: calc(1.3rem + 0.6vw);
@@ -41,7 +55,10 @@ h4 {
   line-height: 1.2;
   margin-bottom: 0.5rem;
   margin-top: 0;
-  letter-spacing: 1;
+  /* letter-spacing: 1; */
+  /* font-weight: 100; */
+  /* font-size: 1.1rem; */
+  /* padding: 0 0 1rem 0; */
 }
 h5 {
   font-size: 1.25rem;
@@ -49,6 +66,25 @@ h5 {
 
 .work-detail p {
   font-size: clamp(1rem, 2.5vw, 1.2rem);
+}
+
+.navCntr {
+  display: flex;
+  justify-content: center;
+  font-weight: 500;
+  font-size: clamp(10px, 3vw, 17px);
+  width: clamp(160px, 8vw, 400px);
+  text-transform: uppercase;
+  align-self: flex-end;
+  text-align: justify;
+}
+
+.link {
+  /* justify-content: center; */
+  letter-spacing: 1em;
+  direction: rtl;
+  display: inline-block;
+  text-indent: -1em;
 }
 @media (min-width: 1200px) {
   .h1,
