--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
+@font-face {
+  font-family: "Sprat";
+  src: url("./assets/fonts/sprat/Sprat-Regularlight.otf");
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -37,6 +42,10 @@ body {
   font-family: "Lato", san-serif;
   font-weight: 300;
   cursor: crosshair;
+}
+
+.sprat {
+  font-family: "Sprat", san-serif;
 }
 
 h1 {
@@ -103,7 +112,6 @@ h5 {
 } */
 
 .link {
-  /* justify-content: center; */
   letter-spacing: 1em;
   direction: rtl;
   display: inline-block;
