--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,8 +60,8 @@ h3 {
   font-size: calc(1.3rem + 0.6vw);
 }
 h4 {
-  font-size: calc(1.275rem + 0.3vw);
-  line-height: 1.2;
+  font-size: 1.2rem;
+  line-height: 1.7rem;
   margin-bottom: 0.5rem;
   margin-top: 0;
   /* letter-spacing: 1; */
@@ -134,6 +134,7 @@ h5 {
   .h4,
   h4 {
     font-size: 1.5rem;
+    line-height: 1.7rem;
   }
 }
 
