--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,6 +48,10 @@ body {
   font-family: "Sprat", san-serif;
 }
 
+.detail-title {
+  font-size: calc(1.3rem + 0.6vw);
+}
+
 h1 {
   font-size: calc(1.375rem + 1.5vw);
   /* font-weight: 300; */
